parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FOLD
    MAP
    and
    commentMult
    commentOne
    false
    interpolacao2
    not
    or
    true

Grammar

Rule 0     S' -> programa
Rule 1     programa -> instrucoes
Rule 2     instrucoes -> instrucao ;
Rule 3     instrucoes -> instrucoes instrucao ;
Rule 4     instrucao -> escrita
Rule 5     instrucao -> atribuicao
Rule 6     instrucao -> definicaoF
Rule 7     instrucao -> chamarF
Rule 8     instrucao -> condicional
Rule 9     escrita -> ESC ( expressao )
Rule 10    atribuicao -> variavel = expressao
Rule 11    definicaoF -> FUNC variavel ( parametros ) , : expressao ;
Rule 12    definicaoF -> FUNC variavel ( parametros ) : instrucoes FIM
Rule 13    chamarF -> variavel ( parametros )
Rule 14    conditional -> SE expressao : instrucoes FIM
Rule 15    expressao -> termo
Rule 16    expressao -> expressao + termo
Rule 17    expressao -> expressao - termo
Rule 18    expressao -> interpolacao
Rule 19    interpolacao -> expressao # { variavel }
Rule 20    termo -> fator
Rule 21    termo -> termo * fator
Rule 22    termo -> termo / fator
Rule 23    fator -> number
Rule 24    fator -> numberF
Rule 25    fator -> variavel
Rule 26    fator -> ( expressao )
Rule 27    fator -> string
Rule 28    fator -> aleatorio
Rule 29    fator -> lista
Rule 30    fator -> entrada
Rule 31    fator -> chamarF
Rule 32    expressao -> expressao < > expressao
Rule 33    aleatorio -> ALT ( number )
Rule 34    lista -> [ elementos ]
Rule 35    lista -> [ ]
Rule 36    entrada -> ENT ( )
Rule 37    elementos -> expressao
Rule 38    elementos -> elementos , expressao
Rule 39    parametros -> variavel
Rule 40    parametros -> parametros , variavel
Rule 41    argumentos -> expressao
Rule 42    argumentos -> argumentos , expressao

Terminals, with rules where they appear

#                    : 19
(                    : 9 11 12 13 26 33 36
)                    : 9 11 12 13 26 33 36
*                    : 21
+                    : 16
,                    : 11 38 40 42
-                    : 17
/                    : 22
:                    : 11 12 14
;                    : 2 3 11
<                    : 32
=                    : 10
>                    : 32
ALT                  : 33
ENT                  : 36
ESC                  : 9
FIM                  : 12 14
FOLD                 : 
FUNC                 : 11 12
MAP                  : 
SE                   : 14
[                    : 34 35
]                    : 34 35
and                  : 
commentMult          : 
commentOne           : 
condicional          : 8
error                : 
false                : 
interpolacao2        : 
not                  : 
number               : 23 33
numberF              : 24
or                   : 
string               : 27
true                 : 
variavel             : 10 11 12 13 19 25 39 40
{                    : 19
}                    : 19

Nonterminals, with rules where they appear

aleatorio            : 28
argumentos           : 42
atribuicao           : 5
chamarF              : 7 31
conditional          : 
definicaoF           : 6
elementos            : 34 38
entrada              : 30
escrita              : 4
expressao            : 9 10 11 14 16 17 19 26 32 32 37 38 41 42
fator                : 20 21 22
instrucao            : 2 3
instrucoes           : 1 3 12 14
interpolacao         : 18
lista                : 29
parametros           : 11 12 13 40
programa             : 0
termo                : 15 16 17 21 22

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . instrucoes
    (2) instrucoes -> . instrucao ;
    (3) instrucoes -> . instrucoes instrucao ;
    (4) instrucao -> . escrita
    (5) instrucao -> . atribuicao
    (6) instrucao -> . definicaoF
    (7) instrucao -> . chamarF
    (8) instrucao -> . condicional
    (9) escrita -> . ESC ( expressao )
    (10) atribuicao -> . variavel = expressao
    (11) definicaoF -> . FUNC variavel ( parametros ) , : expressao ;
    (12) definicaoF -> . FUNC variavel ( parametros ) : instrucoes FIM
    (13) chamarF -> . variavel ( parametros )

    condicional     shift and go to state 8
    ESC             shift and go to state 9
    variavel        shift and go to state 10
    FUNC            shift and go to state 11

    programa                       shift and go to state 1
    instrucoes                     shift and go to state 2
    instrucao                      shift and go to state 3
    escrita                        shift and go to state 4
    atribuicao                     shift and go to state 5
    definicaoF                     shift and go to state 6
    chamarF                        shift and go to state 7

state 1

    (0) S' -> programa .



state 2

    (1) programa -> instrucoes .
    (3) instrucoes -> instrucoes . instrucao ;
    (4) instrucao -> . escrita
    (5) instrucao -> . atribuicao
    (6) instrucao -> . definicaoF
    (7) instrucao -> . chamarF
    (8) instrucao -> . condicional
    (9) escrita -> . ESC ( expressao )
    (10) atribuicao -> . variavel = expressao
    (11) definicaoF -> . FUNC variavel ( parametros ) , : expressao ;
    (12) definicaoF -> . FUNC variavel ( parametros ) : instrucoes FIM
    (13) chamarF -> . variavel ( parametros )

    $end            reduce using rule 1 (programa -> instrucoes .)
    condicional     shift and go to state 8
    ESC             shift and go to state 9
    variavel        shift and go to state 10
    FUNC            shift and go to state 11

    instrucao                      shift and go to state 12
    escrita                        shift and go to state 4
    atribuicao                     shift and go to state 5
    definicaoF                     shift and go to state 6
    chamarF                        shift and go to state 7

state 3

    (2) instrucoes -> instrucao . ;

    ;               shift and go to state 13


state 4

    (4) instrucao -> escrita .

    ;               reduce using rule 4 (instrucao -> escrita .)


state 5

    (5) instrucao -> atribuicao .

    ;               reduce using rule 5 (instrucao -> atribuicao .)


state 6

    (6) instrucao -> definicaoF .

    ;               reduce using rule 6 (instrucao -> definicaoF .)


state 7

    (7) instrucao -> chamarF .

    ;               reduce using rule 7 (instrucao -> chamarF .)


state 8

    (8) instrucao -> condicional .

    ;               reduce using rule 8 (instrucao -> condicional .)


state 9

    (9) escrita -> ESC . ( expressao )

    (               shift and go to state 14


state 10

    (10) atribuicao -> variavel . = expressao
    (13) chamarF -> variavel . ( parametros )

    =               shift and go to state 15
    (               shift and go to state 16


state 11

    (11) definicaoF -> FUNC . variavel ( parametros ) , : expressao ;
    (12) definicaoF -> FUNC . variavel ( parametros ) : instrucoes FIM

    variavel        shift and go to state 17


state 12

    (3) instrucoes -> instrucoes instrucao . ;

    ;               shift and go to state 18


state 13

    (2) instrucoes -> instrucao ; .

    condicional     reduce using rule 2 (instrucoes -> instrucao ; .)
    ESC             reduce using rule 2 (instrucoes -> instrucao ; .)
    variavel        reduce using rule 2 (instrucoes -> instrucao ; .)
    FUNC            reduce using rule 2 (instrucoes -> instrucao ; .)
    $end            reduce using rule 2 (instrucoes -> instrucao ; .)
    FIM             reduce using rule 2 (instrucoes -> instrucao ; .)


state 14

    (9) escrita -> ESC ( . expressao )
    (15) expressao -> . termo
    (16) expressao -> . expressao + termo
    (17) expressao -> . expressao - termo
    (18) expressao -> . interpolacao
    (32) expressao -> . expressao < > expressao
    (20) termo -> . fator
    (21) termo -> . termo * fator
    (22) termo -> . termo / fator
    (19) interpolacao -> . expressao # { variavel }
    (23) fator -> . number
    (24) fator -> . numberF
    (25) fator -> . variavel
    (26) fator -> . ( expressao )
    (27) fator -> . string
    (28) fator -> . aleatorio
    (29) fator -> . lista
    (30) fator -> . entrada
    (31) fator -> . chamarF
    (33) aleatorio -> . ALT ( number )
    (34) lista -> . [ elementos ]
    (35) lista -> . [ ]
    (36) entrada -> . ENT ( )
    (13) chamarF -> . variavel ( parametros )

    number          shift and go to state 25
    numberF         shift and go to state 26
    variavel        shift and go to state 24
    (               shift and go to state 19
    string          shift and go to state 27
    ALT             shift and go to state 32
    [               shift and go to state 33
    ENT             shift and go to state 34

    expressao                      shift and go to state 20
    termo                          shift and go to state 21
    interpolacao                   shift and go to state 22
    fator                          shift and go to state 23
    aleatorio                      shift and go to state 28
    lista                          shift and go to state 29
    entrada                        shift and go to state 30
    chamarF                        shift and go to state 31

state 15

    (10) atribuicao -> variavel = . expressao
    (15) expressao -> . termo
    (16) expressao -> . expressao + termo
    (17) expressao -> . expressao - termo
    (18) expressao -> . interpolacao
    (32) expressao -> . expressao < > expressao
    (20) termo -> . fator
    (21) termo -> . termo * fator
    (22) termo -> . termo / fator
    (19) interpolacao -> . expressao # { variavel }
    (23) fator -> . number
    (24) fator -> . numberF
    (25) fator -> . variavel
    (26) fator -> . ( expressao )
    (27) fator -> . string
    (28) fator -> . aleatorio
    (29) fator -> . lista
    (30) fator -> . entrada
    (31) fator -> . chamarF
    (33) aleatorio -> . ALT ( number )
    (34) lista -> . [ elementos ]
    (35) lista -> . [ ]
    (36) entrada -> . ENT ( )
    (13) chamarF -> . variavel ( parametros )

    number          shift and go to state 25
    numberF         shift and go to state 26
    variavel        shift and go to state 24
    (               shift and go to state 19
    string          shift and go to state 27
    ALT             shift and go to state 32
    [               shift and go to state 33
    ENT             shift and go to state 34

    expressao                      shift and go to state 35
    termo                          shift and go to state 21
    interpolacao                   shift and go to state 22
    fator                          shift and go to state 23
    aleatorio                      shift and go to state 28
    lista                          shift and go to state 29
    entrada                        shift and go to state 30
    chamarF                        shift and go to state 31

state 16

    (13) chamarF -> variavel ( . parametros )
    (39) parametros -> . variavel
    (40) parametros -> . parametros , variavel

    variavel        shift and go to state 36

    parametros                     shift and go to state 37

state 17

    (11) definicaoF -> FUNC variavel . ( parametros ) , : expressao ;
    (12) definicaoF -> FUNC variavel . ( parametros ) : instrucoes FIM

    (               shift and go to state 38


state 18

    (3) instrucoes -> instrucoes instrucao ; .

    condicional     reduce using rule 3 (instrucoes -> instrucoes instrucao ; .)
    ESC             reduce using rule 3 (instrucoes -> instrucoes instrucao ; .)
    variavel        reduce using rule 3 (instrucoes -> instrucoes instrucao ; .)
    FUNC            reduce using rule 3 (instrucoes -> instrucoes instrucao ; .)
    $end            reduce using rule 3 (instrucoes -> instrucoes instrucao ; .)
    FIM             reduce using rule 3 (instrucoes -> instrucoes instrucao ; .)


state 19

    (26) fator -> ( . expressao )
    (15) expressao -> . termo
    (16) expressao -> . expressao + termo
    (17) expressao -> . expressao - termo
    (18) expressao -> . interpolacao
    (32) expressao -> . expressao < > expressao
    (20) termo -> . fator
    (21) termo -> . termo * fator
    (22) termo -> . termo / fator
    (19) interpolacao -> . expressao # { variavel }
    (23) fator -> . number
    (24) fator -> . numberF
    (25) fator -> . variavel
    (26) fator -> . ( expressao )
    (27) fator -> . string
    (28) fator -> . aleatorio
    (29) fator -> . lista
    (30) fator -> . entrada
    (31) fator -> . chamarF
    (33) aleatorio -> . ALT ( number )
    (34) lista -> . [ elementos ]
    (35) lista -> . [ ]
    (36) entrada -> . ENT ( )
    (13) chamarF -> . variavel ( parametros )

    number          shift and go to state 25
    numberF         shift and go to state 26
    variavel        shift and go to state 24
    (               shift and go to state 19
    string          shift and go to state 27
    ALT             shift and go to state 32
    [               shift and go to state 33
    ENT             shift and go to state 34

    expressao                      shift and go to state 39
    termo                          shift and go to state 21
    interpolacao                   shift and go to state 22
    fator                          shift and go to state 23
    aleatorio                      shift and go to state 28
    lista                          shift and go to state 29
    entrada                        shift and go to state 30
    chamarF                        shift and go to state 31

state 20

    (9) escrita -> ESC ( expressao . )
    (16) expressao -> expressao . + termo
    (17) expressao -> expressao . - termo
    (32) expressao -> expressao . < > expressao
    (19) interpolacao -> expressao . # { variavel }

    )               shift and go to state 40
    +               shift and go to state 41
    -               shift and go to state 42
    <               shift and go to state 43
    #               shift and go to state 44


state 21

    (15) expressao -> termo .
    (21) termo -> termo . * fator
    (22) termo -> termo . / fator

    )               reduce using rule 15 (expressao -> termo .)
    +               reduce using rule 15 (expressao -> termo .)
    -               reduce using rule 15 (expressao -> termo .)
    <               reduce using rule 15 (expressao -> termo .)
    #               reduce using rule 15 (expressao -> termo .)
    ;               reduce using rule 15 (expressao -> termo .)
    ]               reduce using rule 15 (expressao -> termo .)
    ,               reduce using rule 15 (expressao -> termo .)
    *               shift and go to state 45
    /               shift and go to state 46


state 22

    (18) expressao -> interpolacao .

    )               reduce using rule 18 (expressao -> interpolacao .)
    +               reduce using rule 18 (expressao -> interpolacao .)
    -               reduce using rule 18 (expressao -> interpolacao .)
    <               reduce using rule 18 (expressao -> interpolacao .)
    #               reduce using rule 18 (expressao -> interpolacao .)
    ;               reduce using rule 18 (expressao -> interpolacao .)
    ]               reduce using rule 18 (expressao -> interpolacao .)
    ,               reduce using rule 18 (expressao -> interpolacao .)


state 23

    (20) termo -> fator .

    *               reduce using rule 20 (termo -> fator .)
    /               reduce using rule 20 (termo -> fator .)
    )               reduce using rule 20 (termo -> fator .)
    +               reduce using rule 20 (termo -> fator .)
    -               reduce using rule 20 (termo -> fator .)
    <               reduce using rule 20 (termo -> fator .)
    #               reduce using rule 20 (termo -> fator .)
    ;               reduce using rule 20 (termo -> fator .)
    ]               reduce using rule 20 (termo -> fator .)
    ,               reduce using rule 20 (termo -> fator .)


state 24

    (25) fator -> variavel .
    (13) chamarF -> variavel . ( parametros )

    *               reduce using rule 25 (fator -> variavel .)
    /               reduce using rule 25 (fator -> variavel .)
    )               reduce using rule 25 (fator -> variavel .)
    +               reduce using rule 25 (fator -> variavel .)
    -               reduce using rule 25 (fator -> variavel .)
    <               reduce using rule 25 (fator -> variavel .)
    #               reduce using rule 25 (fator -> variavel .)
    ;               reduce using rule 25 (fator -> variavel .)
    ]               reduce using rule 25 (fator -> variavel .)
    ,               reduce using rule 25 (fator -> variavel .)
    (               shift and go to state 16


state 25

    (23) fator -> number .

    *               reduce using rule 23 (fator -> number .)
    /               reduce using rule 23 (fator -> number .)
    )               reduce using rule 23 (fator -> number .)
    +               reduce using rule 23 (fator -> number .)
    -               reduce using rule 23 (fator -> number .)
    <               reduce using rule 23 (fator -> number .)
    #               reduce using rule 23 (fator -> number .)
    ;               reduce using rule 23 (fator -> number .)
    ]               reduce using rule 23 (fator -> number .)
    ,               reduce using rule 23 (fator -> number .)


state 26

    (24) fator -> numberF .

    *               reduce using rule 24 (fator -> numberF .)
    /               reduce using rule 24 (fator -> numberF .)
    )               reduce using rule 24 (fator -> numberF .)
    +               reduce using rule 24 (fator -> numberF .)
    -               reduce using rule 24 (fator -> numberF .)
    <               reduce using rule 24 (fator -> numberF .)
    #               reduce using rule 24 (fator -> numberF .)
    ;               reduce using rule 24 (fator -> numberF .)
    ]               reduce using rule 24 (fator -> numberF .)
    ,               reduce using rule 24 (fator -> numberF .)


state 27

    (27) fator -> string .

    *               reduce using rule 27 (fator -> string .)
    /               reduce using rule 27 (fator -> string .)
    )               reduce using rule 27 (fator -> string .)
    +               reduce using rule 27 (fator -> string .)
    -               reduce using rule 27 (fator -> string .)
    <               reduce using rule 27 (fator -> string .)
    #               reduce using rule 27 (fator -> string .)
    ;               reduce using rule 27 (fator -> string .)
    ]               reduce using rule 27 (fator -> string .)
    ,               reduce using rule 27 (fator -> string .)


state 28

    (28) fator -> aleatorio .

    *               reduce using rule 28 (fator -> aleatorio .)
    /               reduce using rule 28 (fator -> aleatorio .)
    )               reduce using rule 28 (fator -> aleatorio .)
    +               reduce using rule 28 (fator -> aleatorio .)
    -               reduce using rule 28 (fator -> aleatorio .)
    <               reduce using rule 28 (fator -> aleatorio .)
    #               reduce using rule 28 (fator -> aleatorio .)
    ;               reduce using rule 28 (fator -> aleatorio .)
    ]               reduce using rule 28 (fator -> aleatorio .)
    ,               reduce using rule 28 (fator -> aleatorio .)


state 29

    (29) fator -> lista .

    *               reduce using rule 29 (fator -> lista .)
    /               reduce using rule 29 (fator -> lista .)
    )               reduce using rule 29 (fator -> lista .)
    +               reduce using rule 29 (fator -> lista .)
    -               reduce using rule 29 (fator -> lista .)
    <               reduce using rule 29 (fator -> lista .)
    #               reduce using rule 29 (fator -> lista .)
    ;               reduce using rule 29 (fator -> lista .)
    ]               reduce using rule 29 (fator -> lista .)
    ,               reduce using rule 29 (fator -> lista .)


state 30

    (30) fator -> entrada .

    *               reduce using rule 30 (fator -> entrada .)
    /               reduce using rule 30 (fator -> entrada .)
    )               reduce using rule 30 (fator -> entrada .)
    +               reduce using rule 30 (fator -> entrada .)
    -               reduce using rule 30 (fator -> entrada .)
    <               reduce using rule 30 (fator -> entrada .)
    #               reduce using rule 30 (fator -> entrada .)
    ;               reduce using rule 30 (fator -> entrada .)
    ]               reduce using rule 30 (fator -> entrada .)
    ,               reduce using rule 30 (fator -> entrada .)


state 31

    (31) fator -> chamarF .

    *               reduce using rule 31 (fator -> chamarF .)
    /               reduce using rule 31 (fator -> chamarF .)
    )               reduce using rule 31 (fator -> chamarF .)
    +               reduce using rule 31 (fator -> chamarF .)
    -               reduce using rule 31 (fator -> chamarF .)
    <               reduce using rule 31 (fator -> chamarF .)
    #               reduce using rule 31 (fator -> chamarF .)
    ;               reduce using rule 31 (fator -> chamarF .)
    ]               reduce using rule 31 (fator -> chamarF .)
    ,               reduce using rule 31 (fator -> chamarF .)


state 32

    (33) aleatorio -> ALT . ( number )

    (               shift and go to state 47


state 33

    (34) lista -> [ . elementos ]
    (35) lista -> [ . ]
    (37) elementos -> . expressao
    (38) elementos -> . elementos , expressao
    (15) expressao -> . termo
    (16) expressao -> . expressao + termo
    (17) expressao -> . expressao - termo
    (18) expressao -> . interpolacao
    (32) expressao -> . expressao < > expressao
    (20) termo -> . fator
    (21) termo -> . termo * fator
    (22) termo -> . termo / fator
    (19) interpolacao -> . expressao # { variavel }
    (23) fator -> . number
    (24) fator -> . numberF
    (25) fator -> . variavel
    (26) fator -> . ( expressao )
    (27) fator -> . string
    (28) fator -> . aleatorio
    (29) fator -> . lista
    (30) fator -> . entrada
    (31) fator -> . chamarF
    (33) aleatorio -> . ALT ( number )
    (34) lista -> . [ elementos ]
    (35) lista -> . [ ]
    (36) entrada -> . ENT ( )
    (13) chamarF -> . variavel ( parametros )

    ]               shift and go to state 49
    number          shift and go to state 25
    numberF         shift and go to state 26
    variavel        shift and go to state 24
    (               shift and go to state 19
    string          shift and go to state 27
    ALT             shift and go to state 32
    [               shift and go to state 33
    ENT             shift and go to state 34

    elementos                      shift and go to state 48
    expressao                      shift and go to state 50
    termo                          shift and go to state 21
    interpolacao                   shift and go to state 22
    fator                          shift and go to state 23
    aleatorio                      shift and go to state 28
    lista                          shift and go to state 29
    entrada                        shift and go to state 30
    chamarF                        shift and go to state 31

state 34

    (36) entrada -> ENT . ( )

    (               shift and go to state 51


state 35

    (10) atribuicao -> variavel = expressao .
    (16) expressao -> expressao . + termo
    (17) expressao -> expressao . - termo
    (32) expressao -> expressao . < > expressao
    (19) interpolacao -> expressao . # { variavel }

    ;               reduce using rule 10 (atribuicao -> variavel = expressao .)
    +               shift and go to state 41
    -               shift and go to state 42
    <               shift and go to state 43
    #               shift and go to state 44


state 36

    (39) parametros -> variavel .

    )               reduce using rule 39 (parametros -> variavel .)
    ,               reduce using rule 39 (parametros -> variavel .)


state 37

    (13) chamarF -> variavel ( parametros . )
    (40) parametros -> parametros . , variavel

    )               shift and go to state 52
    ,               shift and go to state 53


state 38

    (11) definicaoF -> FUNC variavel ( . parametros ) , : expressao ;
    (12) definicaoF -> FUNC variavel ( . parametros ) : instrucoes FIM
    (39) parametros -> . variavel
    (40) parametros -> . parametros , variavel

    variavel        shift and go to state 36

    parametros                     shift and go to state 54

state 39

    (26) fator -> ( expressao . )
    (16) expressao -> expressao . + termo
    (17) expressao -> expressao . - termo
    (32) expressao -> expressao . < > expressao
    (19) interpolacao -> expressao . # { variavel }

    )               shift and go to state 55
    +               shift and go to state 41
    -               shift and go to state 42
    <               shift and go to state 43
    #               shift and go to state 44


state 40

    (9) escrita -> ESC ( expressao ) .

    ;               reduce using rule 9 (escrita -> ESC ( expressao ) .)


state 41

    (16) expressao -> expressao + . termo
    (20) termo -> . fator
    (21) termo -> . termo * fator
    (22) termo -> . termo / fator
    (23) fator -> . number
    (24) fator -> . numberF
    (25) fator -> . variavel
    (26) fator -> . ( expressao )
    (27) fator -> . string
    (28) fator -> . aleatorio
    (29) fator -> . lista
    (30) fator -> . entrada
    (31) fator -> . chamarF
    (33) aleatorio -> . ALT ( number )
    (34) lista -> . [ elementos ]
    (35) lista -> . [ ]
    (36) entrada -> . ENT ( )
    (13) chamarF -> . variavel ( parametros )

    number          shift and go to state 25
    numberF         shift and go to state 26
    variavel        shift and go to state 24
    (               shift and go to state 19
    string          shift and go to state 27
    ALT             shift and go to state 32
    [               shift and go to state 33
    ENT             shift and go to state 34

    termo                          shift and go to state 56
    fator                          shift and go to state 23
    aleatorio                      shift and go to state 28
    lista                          shift and go to state 29
    entrada                        shift and go to state 30
    chamarF                        shift and go to state 31

state 42

    (17) expressao -> expressao - . termo
    (20) termo -> . fator
    (21) termo -> . termo * fator
    (22) termo -> . termo / fator
    (23) fator -> . number
    (24) fator -> . numberF
    (25) fator -> . variavel
    (26) fator -> . ( expressao )
    (27) fator -> . string
    (28) fator -> . aleatorio
    (29) fator -> . lista
    (30) fator -> . entrada
    (31) fator -> . chamarF
    (33) aleatorio -> . ALT ( number )
    (34) lista -> . [ elementos ]
    (35) lista -> . [ ]
    (36) entrada -> . ENT ( )
    (13) chamarF -> . variavel ( parametros )

    number          shift and go to state 25
    numberF         shift and go to state 26
    variavel        shift and go to state 24
    (               shift and go to state 19
    string          shift and go to state 27
    ALT             shift and go to state 32
    [               shift and go to state 33
    ENT             shift and go to state 34

    termo                          shift and go to state 57
    fator                          shift and go to state 23
    aleatorio                      shift and go to state 28
    lista                          shift and go to state 29
    entrada                        shift and go to state 30
    chamarF                        shift and go to state 31

state 43

    (32) expressao -> expressao < . > expressao

    >               shift and go to state 58


state 44

    (19) interpolacao -> expressao # . { variavel }

    {               shift and go to state 59


state 45

    (21) termo -> termo * . fator
    (23) fator -> . number
    (24) fator -> . numberF
    (25) fator -> . variavel
    (26) fator -> . ( expressao )
    (27) fator -> . string
    (28) fator -> . aleatorio
    (29) fator -> . lista
    (30) fator -> . entrada
    (31) fator -> . chamarF
    (33) aleatorio -> . ALT ( number )
    (34) lista -> . [ elementos ]
    (35) lista -> . [ ]
    (36) entrada -> . ENT ( )
    (13) chamarF -> . variavel ( parametros )

    number          shift and go to state 25
    numberF         shift and go to state 26
    variavel        shift and go to state 24
    (               shift and go to state 19
    string          shift and go to state 27
    ALT             shift and go to state 32
    [               shift and go to state 33
    ENT             shift and go to state 34

    fator                          shift and go to state 60
    aleatorio                      shift and go to state 28
    lista                          shift and go to state 29
    entrada                        shift and go to state 30
    chamarF                        shift and go to state 31

state 46

    (22) termo -> termo / . fator
    (23) fator -> . number
    (24) fator -> . numberF
    (25) fator -> . variavel
    (26) fator -> . ( expressao )
    (27) fator -> . string
    (28) fator -> . aleatorio
    (29) fator -> . lista
    (30) fator -> . entrada
    (31) fator -> . chamarF
    (33) aleatorio -> . ALT ( number )
    (34) lista -> . [ elementos ]
    (35) lista -> . [ ]
    (36) entrada -> . ENT ( )
    (13) chamarF -> . variavel ( parametros )

    number          shift and go to state 25
    numberF         shift and go to state 26
    variavel        shift and go to state 24
    (               shift and go to state 19
    string          shift and go to state 27
    ALT             shift and go to state 32
    [               shift and go to state 33
    ENT             shift and go to state 34

    fator                          shift and go to state 61
    aleatorio                      shift and go to state 28
    lista                          shift and go to state 29
    entrada                        shift and go to state 30
    chamarF                        shift and go to state 31

state 47

    (33) aleatorio -> ALT ( . number )

    number          shift and go to state 62


state 48

    (34) lista -> [ elementos . ]
    (38) elementos -> elementos . , expressao

    ]               shift and go to state 63
    ,               shift and go to state 64


state 49

    (35) lista -> [ ] .

    *               reduce using rule 35 (lista -> [ ] .)
    /               reduce using rule 35 (lista -> [ ] .)
    )               reduce using rule 35 (lista -> [ ] .)
    +               reduce using rule 35 (lista -> [ ] .)
    -               reduce using rule 35 (lista -> [ ] .)
    <               reduce using rule 35 (lista -> [ ] .)
    #               reduce using rule 35 (lista -> [ ] .)
    ;               reduce using rule 35 (lista -> [ ] .)
    ]               reduce using rule 35 (lista -> [ ] .)
    ,               reduce using rule 35 (lista -> [ ] .)


state 50

    (37) elementos -> expressao .
    (16) expressao -> expressao . + termo
    (17) expressao -> expressao . - termo
    (32) expressao -> expressao . < > expressao
    (19) interpolacao -> expressao . # { variavel }

    ]               reduce using rule 37 (elementos -> expressao .)
    ,               reduce using rule 37 (elementos -> expressao .)
    +               shift and go to state 41
    -               shift and go to state 42
    <               shift and go to state 43
    #               shift and go to state 44


state 51

    (36) entrada -> ENT ( . )

    )               shift and go to state 65


state 52

    (13) chamarF -> variavel ( parametros ) .

    ;               reduce using rule 13 (chamarF -> variavel ( parametros ) .)
    *               reduce using rule 13 (chamarF -> variavel ( parametros ) .)
    /               reduce using rule 13 (chamarF -> variavel ( parametros ) .)
    )               reduce using rule 13 (chamarF -> variavel ( parametros ) .)
    +               reduce using rule 13 (chamarF -> variavel ( parametros ) .)
    -               reduce using rule 13 (chamarF -> variavel ( parametros ) .)
    <               reduce using rule 13 (chamarF -> variavel ( parametros ) .)
    #               reduce using rule 13 (chamarF -> variavel ( parametros ) .)
    ]               reduce using rule 13 (chamarF -> variavel ( parametros ) .)
    ,               reduce using rule 13 (chamarF -> variavel ( parametros ) .)


state 53

    (40) parametros -> parametros , . variavel

    variavel        shift and go to state 66


state 54

    (11) definicaoF -> FUNC variavel ( parametros . ) , : expressao ;
    (12) definicaoF -> FUNC variavel ( parametros . ) : instrucoes FIM
    (40) parametros -> parametros . , variavel

    )               shift and go to state 67
    ,               shift and go to state 53


state 55

    (26) fator -> ( expressao ) .
